@@ -1,3 +1,6 @@
+Changes from 0.2p5 to 0.2p6:
+	- upgraded iptables from 1.2.9 to 1.3.4
+
 Changes from 0.2p4 to 0.2p5:
 	- pppoe-relay now sets O_NONBLOCK on fds to
 	  avoid the possibility of blocking
